<resources>
    <string name="app_name">Binder</string>

    <string name="oauth_client_id">1077686677872-8a8o24gv14hqn9q75963co1b0ku61upd.apps.googleusercontent.com</string>

    <string name="sign_in_google">Sign in with Google</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login_failed">Login failed, please try again later.</string>
    <string name="get_friends_0">Let\'s get you some</string>
    <string name="get_friends_1">Friends</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="what_school">What school do you attend?</string>
    <string name="what_program">What program are you in?</string>
    <string name="what_interest">What are your interests?</string>
    <string name="next">Next</string>
    <string name="send_file">Send File</string>
    <string name="schedule">Schedule</string>
    <string name="social">Groups</string>
    <string name="calendar">Calendar</string>
    <string name="meetings">Meetings</string>
    <string name="messages">Messages</string>
    <string name="explore">Explore</string>
    <string name="enter_friends">Enter the names of your friends</string>
    <string name="welcome_comma">Welcome,</string>
    <string name="enter_group_members">"Invite friends to your group "</string>
    <string name="enter_group_types">What courses are you studying?</string>
    <string name="enter_friend">Who do you like to add?</string>
    <string name="good_morning">Good Morning</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="name_heading">Name</string>
    <string name="school_heading">School</string>
    <string name="program_heading">Program</string>
    <string name="interest_heading">Interest</string>
    <string name="user">"User "</string>
    <string name="video_menu_title">Conference</string>
    <string name="ongoing_calls_heading">Ongoing Calls</string>
    <string name="scheduled_calls_heading">Scheduled Calls</string>
    <string name="create_call_button">Create New Call</string>
    <string name="schedule_call_button">Schedule Call</string>
    <string name="invite_join_button">Invite Join Call</string>
    <string name="end_call_button">End Call</string>
    <string name="people_button">People</string>
    <string name="video_button">Video</string>
    <string name="mute_button">Mute</string>
    <string name="hyperlink" translatable="false"><a href="abc">Hyperlink</a></string>
    <string name="group_calendar_button" translatable="false">Group Calendar</string>
    <string name="view_recording_button" translatable="false">View Recordings</string>




    <string name="colon">:</string>
    <string name="to">to</string>
    <string name="timezone">TZ:</string>
    <string name="all_day">All Day</string>
    <string name="input_question_title">Input Question</string>
    <string name="input_question_type_title">Select Question Subject</string>
    <string name="question_title">Question:</string>
    <string name="answers_title">Answers:</string>
    <string name="input_answer_title">Input Answers</string>
    <string name="checkbox_title">Check Answer</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="schedule_display_class">ECE 204</string>
    <string name="schedule_display_date">Friday December 24, 2021</string>
    <string name="schedule_display_time">8:30 AM - 10:30 AM</string>
    <string name="schedule_display_occurrence">Weekly on Friday</string>
    <string name="schedule_display_eta">%s minutes before</string>
    <string name="schedule_display_organizer">Douglas Harder</string>
    <string name="settings">Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="log_out">Logout</string>
    <string name="language">Language</string>
    <string name="set_permission">Set Permission</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="sent_by">Sent by:</string>

    <string name="sections">Sections</string>

    <string-array name="languages">
        <item>English</item>
        <item>한국어</item>
    </string-array>

    <string name="enter_name_recommended">Enter the name of your friend or see your</string>
    <string name="recommended_friends">Recommended Friends</string>
    <string name="name">Name: %s</string>
    <string name="school">School: %s</string>
    <string name="program">Program: %s</string>
    <string name="interests">Interests: %s</string>
    <string name="friend">Friend</string>
    <string name="requests">Requests</string>
    <string name="send_request">Send Friend Request</string>
    <string name="submit">Submit</string>
    <string name="approve_request">Approve Friend Request</string>
    <string name="friend_list">Friends List</string>
    <string name="groups_list">Groups List</string>
    <string name="fields_cannot_be_empty">Fields cannot be left blank</string>
    <string name="group_type_too_long">Course ID must be in form XXX###</string>
    <string name="group">Group</string>
    <string name="enter_group">Name your group</string>
    <string name="create">Create</string>
    <string name="no_friend_available">No friend with given name</string>
    <string name="friend_recommendation_title">Recommended</string>
    <string name="update_success">Update Successful</string>
    <string name="update_failed">Update Failed</string>
    <string name="submit_schedule">Submit Schedule</string>
    <string name="recurring">Repeats:</string>
    <string name="select_calendar">Select Calendar</string>
    <string name="personal_calendar">Personal Calendar</string>
    <string name="enter_friends_calendar">Search for a friend to view their calendar</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="select_group_title">View a group calendar</string>
    <string name="app_settings">Application settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="log_out_settings">Log Out</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="last_occurrence">Last Occurrence</string>
    <string name="schedule_display_begin">Begins: %s</string>
    <string name="schedule_display_end">Ends: %s</string>
    <string name="group_profile">Group Profile</string>
    <string name="group_name">Group Name</string>
    <string name="courses">Courses</string>
    <string name="members">Members</string>
    <string name="leave_group">Leave Group</string>
    <string name="delete_friend">Unfriend</string>
    <string name="cannot_remove_owner">Cannot Remove Owner</string>
    <string name="select_to_kick">(Select to Kick)</string>
    <string name="username">UserName</string>
</resources>