<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_back">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/video_menu_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/app_yellow"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ongoing_call_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/ongoing_calls_heading"
        android:textColor="@color/app_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ongoing_call_list"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:layout_marginTop="168dp"
        android:background="@color/app_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ongoing_call_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scheduled_call_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/app_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduled_call_text" />

    <TextView
        android:id="@+id/scheduled_call_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/scheduled_calls_heading"
        android:textColor="@color/app_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messages_button" />

    <Button
        android:id="@+id/social_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/schedule_call_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/schedule_button"
        app:layout_constraintTop_toBottomOf="@+id/ongoing_call_list" />

    <Button
        android:id="@+id/schedule_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/create_call_button"
        app:layout_constraintEnd_toStartOf="@id/social_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ongoing_call_list"
        style="@style/VideoButtonStyle" />

    <Button
        android:id="@+id/messages_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/invite_join_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/meetings_button"
        app:layout_constraintTop_toBottomOf="@+id/social_button" />

    <Button
        android:id="@+id/meetings_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/messages"
        app:layout_constraintBottom_toTopOf="@+id/scheduled_call_text"
        app:layout_constraintEnd_toStartOf="@id/messages_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/schedule_button" />
</androidx.constraintlayout.widget.ConstraintLayout>