<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/user_profile_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_group"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/round_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_comma"
        android:textColor="@color/app_grey"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/user_profile_button"
        app:layout_constraintTop_toTopOf="@id/user_profile_button"/>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_comma"
        android:textColor="@color/app_back"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/greeting_text"
        app:layout_constraintStart_toEndOf="@id/user_profile_button"
        tools:text="Anurag"/>

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_settings"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/fui_transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/section_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sections"
        android:textColor="@color/app_back"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_button"/>

    <LinearLayout
        android:id="@+id/group_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/section_text">

        <ImageButton
            android:id="@+id/social_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/fui_transparent"
            android:src="@drawable/ic_social"
            android:text="@string/social"/>

        <ImageButton
            android:id="@+id/schedule_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/fui_transparent"
            android:src="@drawable/ic_schedule"
            android:text="@string/schedule"/>

        <ImageButton
            android:id="@+id/messages_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/fui_transparent"
            android:src="@drawable/ic_messages"
            android:text="@string/messages"/>

        <ImageButton
            android:id="@+id/meetings_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/fui_transparent"
            android:src="@drawable/ic_meetings"
            android:text="@string/meetings" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/static_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/top_side_rounded_app_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_buttons"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>