<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/what_school_text"
        tools:text="Sample name"
        style="@style/TitleTextviewStyle"/>

    <TextView
        android:id="@+id/what_school_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_school"
        android:gravity="left"
        android:textColor="@color/sub_title"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintBottom_toTopOf="@id/what_school_edit"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/what_school_edit"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/what_school_text"
        app:layout_constraintBottom_toTopOf="@id/what_program_text" />

    <TextView
        android:id="@+id/what_program_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_program"
        android:gravity="left"
        android:textColor="@color/sub_title"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/what_school_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/what_program_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/what_program_edit"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_edit"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/what_program_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/what_interest_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/what_interest_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_interest"
        android:gravity="left"
        android:textColor="@color/sub_title"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/what_program_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/what_interest_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/what_interest_edit"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_edit"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/what_interest_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_button"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        style="@style/AppButtonStyle"/>



</androidx.constraintlayout.widget.ConstraintLayout>